force-app/main/default/objects/sfmc_email_publication_534007695__dll/fields/EmailName2__c.field-meta.xml
<CustomField>
    <fullName>EmailName2__c</fullName>
    <label>Email Name 2</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>EmailName2</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>