force-app/main/default/objects/sfmc_email_publication_534007695__dll/fields/EmailPreHeader__c.field-meta.xml
<CustomField>
    <fullName>EmailPreHeader__c</fullName>
    <label>Email Pre Header</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>EmailPreHeader</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>