force-app/main/default/objects/sfmc_email_publication_534007695__dll/fields/EmailSendDefinitionID__c.field-meta.xml
<CustomField>
    <fullName>EmailSendDefinitionID__c</fullName>
    <label>Email Send Definition ID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>EmailSendDefinitionID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>