force-app/main/default/objects/sfmc_email_publication_534007695__dll/fields/FromEmail__c.field-meta.xml
<CustomField>
    <fullName>FromEmail__c</fullName>
    <label>From Email</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>FromEmail</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>