force-app/main/default/objects/sfmc_email_publication_534007695__dll/fields/JobTypeID__c.field-meta.xml
<CustomField>
    <fullName>JobTypeID__c</fullName>
    <label>Job Type ID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>JobTypeID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>