force-app/main/default/objects/sfmc_email_publication_534007695__dll/fields/SendClassificationID__c.field-meta.xml
<CustomField>
    <fullName>SendClassificationID__c</fullName>
    <label>Send Classification ID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>SendClassificationID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>