force-app/main/default/objects/sfmc_email_publication_534007695__dll/fields/SendTime__c.field-meta.xml
<CustomField>
    <fullName>SendTime__c</fullName>
    <label>Send Time</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>SendTime</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>