force-app/main/default/objects/sfmc_email_publication_534007695__dll/fields/SuppressTracking__c.field-meta.xml
<CustomField>
    <fullName>SuppressTracking__c</fullName>
    <label>Suppress Tracking</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>SuppressTracking</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>