force-app/main/default/objects/sfmc_email_publication_534007695__dll/fields/TestJobTypeID__c.field-meta.xml
<CustomField>
    <fullName>TestJobTypeID__c</fullName>
    <label>Test Job Type ID</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>TestJobTypeID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>